# scintilla-example

./: .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake.yml
cmake/: FindScintilla.cmake  target_copy_lexer_plugin.cmake  target_prefix.cmake  vs_startup_project.cmake
lexer/: CMakeLists.txt  lexer.cpp
lexer/include/formula/: syntax.h
lexer/include/lexer/: lexer.h
lexlib/: CMakeLists.txt
tests/: CMakeLists.txt  config.h.in  lexer_test.cpp
tools/: CMakeLists.txt  main.cpp
vcpkg-overlays/libuuid/: CMakeLists.txt
vcpkg-overlays/wxwidgets/: cmake-4-version.patch  portfile.cmake
